--- a/p5.js/Interactive Display with Rotating Blocks /index.html
+++ b/p5.js/Interactive Display with Rotating Blocks /index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>rotating blocks</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/rotating-block.css">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -15,7 +15,11 @@
   </head>
 
   <body>
-    <script src="sketch.js"></script>
-    <script src="block.js"></script>
+    <main>
+      <p class="cim">Interactive Display with Rotating Blocks</p>
+    </main>
+
+    <script src="script/rotating-block-sketch.js"></script>
+    <script src="script/rotating-block.js"></script>
   </body>
 </html>
