--- a/p5.js/ Beautiful Trigonometry/trigonometry.html
+++ b/p5.js/ Beautiful Trigonometry/trigonometry.html
@@ -5,10 +5,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/trigonometry.css">
     <meta charset="utf-8" />
-
   </head>
+  
   <body>
     <main>
+      <p class="cim">Beautiful Trigonometry</p>
     </main>
     <script src="script/trigonometry-sketch.js"></script>
   </body>
