spam-filter.html

--- a/Spam filter/spam-filter.html
+++ b/Spam filter/spam-filter.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Learn Regular Expressions by Building a Spam Filter</title>
-    <link rel="stylesheet" href="styles/Spam-filter.css" />
+    <title>Spam Filter</title>
+    <link rel="stylesheet" href="styles/spam-filter.css" />
   </head>
 
   <body>
@@ -32,6 +32,6 @@
       <p id="result"></p>
     </main>
 
-    <script src="scripts/Spam-filter.js"></script>
+    <script src="scripts/spam-filter.js"></script>
   </body>
 </html>
