--- a/Dice game/dice-game.html
+++ b/Dice game/dice-game.html
@@ -100,6 +100,7 @@
       <ol id="score-history"></ol>
     </div>
   </main>
-  <script src="scripts/Dice-game.js"></script>
+  <script src="scripts/dice-game.js"></script>
 </body>
+
 </html>
