--- a/Palindrome/palindrome.html
+++ b/Palindrome/palindrome.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/Palindrome.css">
+    <link rel="stylesheet" href="./styles/palindrome.css">
   </head>
 
   <body>
@@ -30,6 +30,6 @@
 
     <div id="result"></div>
 
-    <script src="scripts/Palindrome.js"></script>
+    <script src="scripts/palindrome.js"></script>
   </body>
 </html>
