--- a/Questions/questions.html
+++ b/Questions/questions.html
@@ -63,5 +63,8 @@
       </div>
     </section>
 
+        
+<!-- use questions-1.js or questions-2.js -->
+    <script src="scripts/questions-1.js"></script>
   </body>
 </html>
