--- a/Counter/counter.html
+++ b/Counter/counter.html
@@ -11,3 +11,18 @@
   </head>
 
   <body>
+    <main>
+      <div class="container">
+        <h1>counter</h1>
+        <span id="value">0</span>
+        <div class="button-container">
+          <button class="btn decrease">DECREASE</button>
+          <button class="btn reset">RESET</button>
+          <button class="btn increase">INCREASE</button>
+        </div>
+      </div>
+    </main>
+    
+    <script src="scripts/counter.js"></script>
+  </body>
+</html>
