--- a/Tabs/tabs.html
+++ b/Tabs/tabs.html
@@ -16,3 +16,15 @@
           aperiam!
         </p>
       </div>
+  <div class="about-center section-center">
+        <article class="about-img">
+          <img src="img/hero.jpeg" />
+        </article>
+        <article class="about">
+
+          <div class="btn-container">
+            <button class="tab-btn active" data-id="history">History</button>
+            <button class="tab-btn" data-id="vision">Vision</button>
+            <button class="tab-btn" data-id="goals">Goals</button>
+          </div>
+          <div class="about-content">
