--- a/Color/color-hex.html
+++ b/Color/color-hex.html
@@ -12,6 +12,19 @@
   </head>
 
   <body>
+    <nav>
+      <div class="nav-center">
+        <h4>color flipper <i class="fa-solid fa-palette"></i></h4>
+        <ul class="nav-links">
+          <li>
+            <a href="color.html">simple</a>
+          </li>
+          <li>
+            <a href="color-hex.html">hex</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
     <main>
       <div class="container">
