--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -13,9 +13,14 @@
 
 <body>
 
+  <section class="menu">
+    <div class="title">
+      <h2>Our Menu</h2>
+      <div class="underline"></div>
+    </div>
 
 
-   
+  </section>
 
   <script src="scripts/menu.js"></script>
 </body>
