--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-
   <section class="menu">
     <div class="title">
       <h2>Our Menu</h2>
@@ -26,7 +25,20 @@
       <button class="filter-btn" type="button" data-id="shakes">Shakes</button>
     </div>
 
-   
+    <div class="section-center">
+      <!-- single item-->
+      <article class="menu-item">
+        <img src="" class="photo" alt="">
+        <div class="item-info">
+          <header>
+            <h4></h4>
+            <h4 class="price"></h4>
+          </header>
+          <p class="item-text"></p>
+        </div>
+      </article>
+      <!-- end of single item-->
+    </div>
   </section>
 
   <script src="scripts/menu.js"></script>
