--- a/Age-callculator/age-cal.html
+++ b/Age-callculator/age-cal.html
@@ -10,9 +10,15 @@
   </head>
 
   <body>
-   
-
-      
-  
+     <div class="container">
+      <div class="calculator">
+        <h1>JavaScript<br><span>Age Calculator</span></h1>
+        <div class="input-box">
+          <input type="date" id="date">
+          <button onclick="calculateAge()">Calculate</button>
+        </div>
+        <p id="result"></p>
+      </div>
+    </div>
   </body>
 </html>
