--- a/Background/background.html
+++ b/Background/background.html
@@ -11,8 +11,21 @@
   </head>
 
   <body>
-  
+    <h1>Image background<br>change effect <i class="fa-solid fa-rotate"></i></h1>
+    <div class="container">
+      <div class="img-box">
+        <img src="kepek/background_change_img/transparent.png" width="100%">
 
-  
+        <div class="img-wrap">
+          <img src="kepek/background_change_img/original.jpg" id="originalImg">
+        </div>
+
+        <span id="line">
+          <img src="kepek/background_change_img/arrow.png" class="arrow">
+        </span>
+      </div>
+    </div>
+
+    <script src="scripts/background.js"></script>
   </body>
 </html>
