--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -10,5 +10,19 @@
     <link rel="stylesheet" href="styles/calendar.css">
   </head>
 
-  
+  <body>
+    <div class="hero">
+      <div class="calendar">
+        <div class="left">
+          <p id="date">01</p>
+          <p id="day">Sunday</p>
+        </div>
+
+        <div class="right">
+          <p id="month">January</p>
+          <p id="year">2020</p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
