--- a/Circular/circular.html
+++ b/Circular/circular.html
@@ -11,8 +11,13 @@
   </head>
 
   <body>
-   
+    <div class="skill">
+      <div class="outer">
+        <div class="inner">
+          <div id="number"></div>
+        </div>
+      </div>
 
-    
+
   </body>
 </html>
