--- a/Circular/circular.html
+++ b/Circular/circular.html
@@ -19,10 +19,20 @@
       </div>
 
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
-        
-        </svg>
+        <defs>
+           <linearGradient id="GradientColor">
+              <stop offset="0%" stop-color="yellow" />
+              <stop offset="20%" stop-color="red" />
+              <stop offset="40%" stop-color="hotpink" />
+              <stop offset="60%" stop-color="blue" />
+              <stop offset="80%" stop-color="green" />
+              <stop offset="100%" stop-color="grey" />
+           </linearGradient>
+        </defs>
+        <circle cx="80" cy="80" r="70" stroke-linecap="round" />
+      </svg>
     </div>
 
- 
+    <script src="scripts/circular.js"></script>
   </body>
 </html>
