--- a/Color/color-fcc.html
+++ b/Color/color-fcc.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="./styles/color-fcc.css" />
   </head>
   <body>
- 
+    <h1>Random Background Color changer</h1>
+
+    <main>
+      <section class="bg-information-container">
+        <p>Hex Code: <span id="bg-hex-code">#110815</span></p>
+      </section>
+
+      <button class="btn" id="btn">Change Background Color</button>
+    </main>
     <script src="./scripts/color-fcc.js"></script>
   </body>
 </html>
