--- a/Drag and drop/drag-drop.html
+++ b/Drag and drop/drag-drop.html
@@ -10,8 +10,18 @@
   </head>
 
   <body>
-  
+    <div class="container">
+      
+      <div id="left">
+        <div class="list" draggable="true">List item 1</div>
+        <div class="list" draggable="true">List item 2</div>
+        <div class="list" draggable="true">List item 3</div>
+        <div class="list" draggable="true">List item 4</div>
+      </div>
 
-    
+      <div id="right"></div>
+    </div>
+
+    <script src="scripts/drag-drop.js"></script>
   </body>
 </html>
