--- a/Email/email.html
+++ b/Email/email.html
@@ -11,8 +11,17 @@
   </head>
 
   <body>
-   
+    <div class="hero">
+      <h3>Coming soon!</h3>
+      <h1>Our brand new<br>Website is on it's way</h1>
+      <p>Subscribe for more details.</p>
+      <form name="submit-to-google-sheet">
+        <input type="email" name="Email" placeholder="Enter email" required>
+        <button type="submit"><img src="kepek/send-icon.png" width="30px"></button>
+      </form>
+      <span id="msg"></span>
+    </div>
 
-   
+    <script src="scripts/email.js"></script>
   </body>
 </html>
