--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -14,6 +14,19 @@
     <div class="gallery-wrap">
       <img src="kepek/gallery/back.png" id="backBtn">
 
+      <div class="gallery">
+        <div>
+          <span><img src="kepek/gallery/image-1.png"></span>
+          <span><img src="kepek/gallery/image-2.png"></span>
+          <span><img src="kepek/gallery/image-3.png"></span>
+        </div>
+  
+        <div>
+          <span><img src="kepek/gallery/image-4.png"></span>
+          <span><img src="kepek/gallery/image-5.png"></span>
+          <span><img src="kepek/gallery/image-6.png"></span>
+        </div>
+      </div>
 
       <img src="kepek/gallery/next.png" id="nextBtn">
     </div>
