--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -30,5 +30,7 @@
 
       <img src="kepek/gallery/next.png" id="nextBtn">
     </div>
+
+    <script src="scripts/gallery.js"></script>
   </body>
 </html>
