--- a/Meme/meme.html
+++ b/Meme/meme.html
@@ -11,7 +11,13 @@
   </head>
 
   <body>
+    <div class="meme-generator">
+      <button class="generate-meme-btn">Generate meme</button>
+      <h2 class="meme-title">Loading...</h2>
 
+      <img src="" alt="">
+      <div class="meme-author"></div>
+    </div>
 
     <script src="scripts/meme.js"></script>
   </body>
