--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -7,6 +7,12 @@
   </head>
 
   <body>
-  
+    <div class="container">
+      <h1><img src="kepek/notes.png"> Notes</h1>
+      <button class="btn"><img src="kepek/edit.png"> Create notes</button>
+      <div class="notes-container"></div>
+    </div>
+
+    <script src="scripts/notes-app.js"></script>
   </body>
 </html>
