--- a/Notes/notes.html
+++ b/Notes/notes.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes App</title>
-    <link rel="stylesheet" href="styles/notes-app.css">
+    <link rel="stylesheet" href="styles/notes.css">
   </head>
 
   <body>
@@ -13,6 +13,6 @@
       <div class="notes-container"></div>
     </div>
 
-    <script src="scripts/notes-app.js"></script>
+    <script src="scripts/notes.js"></script>
   </body>
 </html>
