--- a/Password/password.html
+++ b/Password/password.html
@@ -6,12 +6,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    
     <link rel="stylesheet" href="styles/password-str.css">
   </head>
 
   <body>
-    
+    <div class="container">
+      <div class="input-box">
+        <input type="password" id="password" placeholder="Password">
+        <button type="submit"><img src="kepek/send-icon.png" width="30px"></button>
+        <p id="message">Password is <span id="strength"></span></p>
+      </div>
+    </div>
 
     <script src="scripts/password.js"></script>
   </body>
