--- a/Password/password-1.html
+++ b/Password/password-1.html
@@ -3,14 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="styles/password.css">
+    <link rel="stylesheet" href="styles/password-1.css">
   </head>
 
   <body> 
+    <div class="input-box">
+      <input type="password" placeholder="password" id="password">
+      <img src="kepek/eye-close.png" id="eyeicon">
+    </div>
 
+    <script src="scripts/password-1.js"></script>
   </body>
 </html>
