--- a/Popup/popup.html
+++ b/Popup/popup.html
@@ -5,16 +5,20 @@
     <title>Popup</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="styles/popup.css">
   </head>
 
   <body>
     <div class="container">
       <button type="submit" class="btn" onclick="openPopup()">Submit</button>
-      
+      <div class="popup" id="popup">
+        <img src="kepek/checked.png">
+        <h2>Thank you!</h2>
+        <p>Your details has been successfully submitted.</p>
+        <button type="button" onclick="closePopup()">OK</button>
+      </div>
     </div>
-
-  
+<script src=""scripts/popup.js></script>
   </body>
 </html>
