--- a/Product/product.html
+++ b/Product/product.html
@@ -73,6 +73,23 @@
                   <span class="color-3"></span>
                 </label>
 
-    
+                <label for="pink">
+                  <input type="radio" name="color" id="pink">
+                  <span class="color-4"></span>
+                </label>
+              </div>
+
+              <div class="quantity-select">
+                <p>Quantity</p>
+                <input type="number" value="1">
+              </div>
+
+              <button>Buy now</button>
+            </form>
+        </div>
+      </div>
+    </div>
+
+
   </body>
 </html>
