--- a/Qr-code-generator/qr-code.html
+++ b/Qr-code-generator/qr-code.html
@@ -8,5 +8,14 @@
 
   <body>
 
+    <div class="container">
+      <p>Enter your <span class="sp">text</span> or <span class="sp">URL</span></p>
+     
+
+      <button onclick="generateQR()">Generate QR Code</button>
+    </div>
+
+   
+    
   </body>
 </html>
