--- a/Qr-code-generator/qr-code.html
+++ b/Qr-code-generator/qr-code.html
@@ -9,9 +9,12 @@
   <body>
 
     <div class="container">
-     
+      <p>Enter your <span class="sp">text</span> or <span class="sp">URL</span></p>
 
-      <button onclick="generateQR()">Generate QR Code</button>
+      <div id="imgBox">
+        <img src="" id="qrImage">
+      </div>
+
     </div>
 
   </body>
