--- a/Qr-code-generator/qr-code.html
+++ b/Qr-code-generator/qr-code.html
@@ -7,15 +7,17 @@
   </head>
 
   <body>
-
     <div class="container">
       <p>Enter your <span class="sp">text</span> or <span class="sp">URL</span></p>
+      <input type="text" placeholder="Text or URL" id="qrText">
 
       <div id="imgBox">
         <img src="" id="qrImage">
       </div>
 
+      <button onclick="generateQR()">Generate QR Code</button>
     </div>
 
+    <script src="scripts/qr-code.js"></script>
   </body>
 </html>
