--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
-   
+    <div class="app">
+      <h1>Quiz</h1>
+      
+    </div>
+    <script src="scripts/quiz.js"></script>
   </body>
 </html>
