--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -10,7 +10,13 @@
   <body>
     <div class="app">
       <h1>Quiz</h1>
-      
+      <div class="quiz">
+        <h2 id="question">Question goes here</h2>
+        <div id="answer-buttons">
+       
+        </div>
+        <button id="next-btn">Next</button>
+      </div>
     </div>
     <script src="scripts/quiz.js"></script>
   </body>
